--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
         </div>
         <div class="horizontalBar"></div>
         <div class="menu">
-            <a class="bttMenu" href="/"> HOME </a>
-            <a class="bttMenu" href="quemsomos/index.html"> QUEM SOMOS </a>
-            <a class="bttMenu" href="turmas/index.html"> TURMAS </a>
-            <a class="bttMenu" href="docentes/index.html"> DOCENTES </a>
-            <a class="bttMenu" href="contato/index.html"> CONTATOS </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/"> HOME </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/quemsomos/index.html"> QUEM SOMOS </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/turmas/index.html"> TURMAS </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/docentes/index.html"> DOCENTES </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/contato/index.html"> CONTATOS </a>
             
         </div>
 
