--- a/turmas/index.html
+++ b/turmas/index.html
@@ -147,11 +147,11 @@
         </div>
         <div class="horizontalBar"></div>
         <div class="menu">
-            <a class="bttMenu" href="/"> HOME </a>
-            <a class="bttMenu" href="/quemsomos/"> QUEM SOMOS </a>
-            <a class="bttMenu" href="/turmas/"> TURMAS </a>
-            <a class="bttMenu" href="/docentes/"> DOCENTES </a>
-            <a class="bttMenu" href="/contato/"> CONTATOS </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/"> HOME </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/quemsomos/index.html"> QUEM SOMOS </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/turmas/index.html"> TURMAS </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/docentes/index.html"> DOCENTES </a>
+            <a class="bttMenu" href="https://joaohitallo.github.io/everestpart2/contato/index.html"> CONTATOS </a>
             
         </div>
 
